[gd_scene load_steps=8 format=2]

[ext_resource path="res://Background/sky.png" type="Texture" id=1]
[ext_resource path="res://Background/pine2.png" type="Texture" id=2]
[ext_resource path="res://start.gd" type="Script" id=3]
[ext_resource path="res://UI/soundIcon-Mute.png" type="Texture" id=4]
[ext_resource path="res://UI/soundIcon.png" type="Texture" id=5]
[ext_resource path="res://Sounds/actionMusic.wav" type="AudioStream" id=6]
[ext_resource path="res://story.tscn" type="PackedScene" id=7]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -344.0
margin_top = -199.0
margin_right = 344.0
texture = ExtResource( 2 )

[node name="play" type="Button" parent="TextureRect/TextureRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.5
margin_top = -16.0
margin_right = 21.5
margin_bottom = 4.0
text = "PLAY"

[node name="exit" type="Button" parent="TextureRect/TextureRect2"]
anchor_left = 0.501
anchor_top = 0.773
anchor_right = 0.501
anchor_bottom = 0.773
margin_left = -19.688
margin_top = -22.827
margin_right = 19.312
margin_bottom = -2.827
text = "EXIT"

[node name="Label" type="Label" parent="TextureRect/TextureRect2"]
anchor_left = 0.51
anchor_top = 0.36
anchor_right = 0.51
anchor_bottom = 0.36
margin_left = -71.88
margin_top = -14.64
margin_right = 72.12
margin_bottom = -0.639999
text = "Run Astrounot Run"
align = 1
valign = 1
uppercase = true

[node name="mute" type="TextureButton" parent="TextureRect/TextureRect2"]
margin_left = 640.0
margin_top = -8.0
margin_right = 896.0
margin_bottom = 248.0
rect_scale = Vector2( 0.156144, 0.172414 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="Control" parent="." instance=ExtResource( 7 )]
visible = false
margin_left = -1.0
margin_top = 3.0
margin_right = -1.0
margin_bottom = 3.0

[connection signal="pressed" from="TextureRect/TextureRect2/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="TextureRect/TextureRect2/exit" to="." method="_on_exit_pressed"]
[connection signal="toggled" from="TextureRect/TextureRect2/mute" to="." method="_on_TextureButton_toggled"]
